migration-result/docs/ver/13.x/database-access/guides/rds-proxy-mysql.mdx
---
title: Database Access with AWS RDS Proxy for MariaDB/MySQL
description: How to configure Teleport database access with AWS RDS Proxy for MariaDB/MySQL.
version: "13.x"
---

Teleport can provide secure access to AWS RDS proxy for MariaDB or MySQL via the  [Teleport Database
Service](/docs/ver/13.x/database-access/introduction). This allows for
fine-grained access control through [Teleport's RBAC](/docs/ver/13.x/database-access/rbac).

In this guide, you will:

1. Configure an AWS RDS proxy for MariaDB or MySQL with IAM authentication.
2. Join the AWS RDS proxy for MariaDB or MySQL database to your Teleport cluster.
3. Connect to the AWS RDS proxy for MariaDB or MySQL database via the Teleport Database Service.

<Tabs>
  <Tab title="Self-Hosted">
        <img src="/assets/rds-proxy_selfhosted-071d404941.png" alt="Teleport Database Access RDS Proxy Self-Hosted" width="1189" height="443" />
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
        <img src="/assets/rds-proxy_cloud-e2158ef4f0.png" alt="Teleport Database Access RDS Proxy Cloud" width="1189" height="443" />
  </Tab>
</Tabs>

<Note>
  <p>
    **Supported Engine Family**
  </p>

  Teleport currently supports RDS Proxy instances with engine family
  [PostgreSQL](/docs/ver/13.x/database-access/guides/rds-proxy-postgres),
  [MariaDB/MySQL](/docs/ver/13.x/database-access/guides/rds-proxy-postgres) or
  [Microsoft SQL Server](/docs/ver/13.x/database-access/guides/rds-proxy-sqlserver).
</Note>

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/docs/ver/13.x) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.4.16.

      ```bash
      $ tctl version
      # Teleport v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```

      See [Installation](/docs/ver/13.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport v13.4.16 go1.21
      
    $ tsh version
    # Teleport v13.4.16 go1.21
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport Enterprise v14.3.6 go1.21
      
    $ tsh version
    # Teleport v14.3.6 go1.21
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/docs/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      13.4.16, which you can download by visiting your [Teleport
      account](https://teleport.sh).

      ```bash
      $ tctl version
      # Teleport Enterprise v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.6.
      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

      ```bash
      $ tctl version
      # Teleport Enterprise v14.3.6 go1.21

      $ tsh version
      # Teleport v14.3.6 go1.21
      ```
  </Tab>
</Tabs>

- AWS account with RDS Proxy instances and permissions to create and attach IAM policies.
- Any RDS Proxy instances intended for connection through Teleport must have TLS enabled.
- A host, e.g., an EC2 instance, where you will run the Teleport Database
  Service.
- Make sure you can connect to your Teleport cluster by authenticating with `tsh`
  so you can execute commands with the `tctl` admin tool:
  <Tabs>
    <Tab title="Self-Hosted">
      ```bash
      $ tsh login --proxy=teleport.example.com --user=email@example.com
      $ tctl status
      # Cluster  teleport.example.com
      # Version  13.4.16
      # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
      ```

      You can run subsequent `tctl` commands in this guide on your local machine.

      For full privileges, you can also run `tctl` commands on your Teleport Auth
      Service host.
    </Tab>

    <Tab title="Teleport Cloud">
      ```bash
      $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
      $ tctl status
      # Cluster  myinstance.teleport.sh
      # Version  14.3.6
      # CA pin   sha256:sha-hash-here
      ```

      You must run subsequent `tctl` commands in this guide on your local machine.
    </Tab>
  </Tabs>

## Step 1/5. Create a Database Service configuration

The Database Service requires a valid auth token to connect to the cluster. Generate
one by running the following command against your Teleport Auth Service and save
it in `/tmp/token` on the node that will run the Database Service:

```bash
$ tctl tokens add --type=db
```

<Accordion title="Alternative methods">
  For users with a lot of infrastructure in AWS, or who might create or recreate
  many instances, consider alternative methods for joining new EC2 instances running
  Teleport:

  - [Configure Teleport to Automatically Enroll EC2 instances (Preview)](/docs/ver/13.x/server-access/guides/ec2-discovery)
  - [Joining Teleport Services via AWS IAM
    Role](/docs/ver/13.x/agents/join-services-to-your-cluster/aws-iam)
  - [Joining Teleport Services via AWS EC2 Identity Document](/docs/ver/13.x/agents/join-services-to-your-cluster/aws-ec2)
</Accordion>

Install Teleport on the host where you will run the Teleport Database Service:

Use the appropriate commands for your environment to install your package:

<Tabs dropdownView dropdownCaption="Teleport Edition">
  <Tab title="Teleport Community Edition">
    ```bash
    $ curl https://goteleport.com/static/install.sh | bash -s 13.4.16
    ```
  </Tab>

  <Tab title="Teleport Team">
    <Tabs>
      <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
        Add the Teleport repository to your repository list:

        ```bash
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport APT repository for cloud.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Update the repo and install Teleport and the Teleport updater
        $ sudo apt-get update
        $ sudo apt-get install "teleport-ent=$TELEPORT_VERSION" teleport-ent-updater
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum install -y yum-utils
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo yum install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo dnf install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport Zypper repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use Zypper to add the teleport RPM repo
        $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo zypper install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater
        ```
      </Tab>
    </Tabs>

    ### OS repository channels

    The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
    `stable/v13` anywhere in the Teleport documentation.

    | Channel name     | Description                                                                  |
    | ---------------- | ---------------------------------------------------------------------------- |
    | `stable/<major>` | Receives releases for the specified major release line, i.e. `v13`           |
    | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
    | `stable/rolling` | Rolling channel that receives all published Teleport releases                |

    <Accordion title="Is my Teleport instance compatible with Teleport Team?">
      Before installing a `teleport` binary with a version besides
      v14, read our compatibility rules to ensure that the
      binary is compatible with Teleport Cloud.

      When running multiple `teleport` binaries within a cluster, the following rules
      apply:

      - **Patch and minor** versions are always compatible, for example, any 8.0.1
        component will work with any 8.0.3 component and any 8.1.0 component will work
        with any 8.3.0 component.
      - Servers support clients that are 1 major version behind, but do not support
        clients that are on a newer major version. For example, an 8.x.x Proxy Service
        is compatible with 7.x.x resource services and 7.x.x `tsh`, but we don't
        guarantee that a 9.x.x resource service will work with an 8.x.x Proxy Service.
        This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
        You must upgrade to 7.x.x first.
      - Proxy Services and resource services do not support Auth Services that are on
        an older major version, and will fail to connect to older Auth Services by
        default. This behavior can be overridden by passing `--skip-version-check`
        when starting Proxy Services and resource services.
    </Accordion>
  </Tab>

  <Tab title="Teleport Enterprise">
    <Tabs>
      <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
        ```bash
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport APT repository for v13. You'll need to update this
        # file for each major release of Teleport.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/v13" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        $ sudo apt-get update
        $ sudo apt-get install teleport-ent
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```bash
        $ sudo apt-get install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7 (yum)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for v13. You'll need to update this
        # file for each major release of Teleport.
        # First, get the major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum install -y yum-utils
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"
        $ sudo yum install teleport-ent
        #
        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```bash
        $ sudo yum install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7 (zypper)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport Zypper repository for v13. You'll need to update this
        # file for each major release of Teleport.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use zypper to add the teleport RPM repo
        $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")
        $ sudo yum install teleport-ent
        #
        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```bash
        $ sudo yum install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for v13. You'll need to update this
        # file for each major release of Teleport.
        # First, get the major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"

        # Install teleport
        $ sudo dnf install teleport-ent

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```bash
        $ sudo dnf install teleport-ent-fips
        ```
      </Tab>

      <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport Zypper repository.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use Zypper to add the teleport RPM repo
        $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport-zypper.repo")

        # Install teleport
        $ sudo zypper install teleport-ent
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```bash
        $ sudo zypper install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Tarball">
        In the example commands below, update `$SYSTEM_ARCH` with the appropriate
        value (`amd64`, `arm64`, or `arm`). All example commands using this variable
        will update after one is filled out.

        ```bash
        $ curl https://cdn.teleport.dev/teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```

        For FedRAMP/FIPS-compliant installations of Teleport Enterprise, package URLs
        will be slightly different:

        ```bash
        $ curl https://cdn.teleport.dev/teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-fips-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```
      </Tab>
    </Tabs>

    ### OS repository channels

    The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
    `stable/v13` anywhere in the Teleport documentation.

    | Channel name     | Description                                                                  |
    | ---------------- | ---------------------------------------------------------------------------- |
    | `stable/<major>` | Receives releases for the specified major release line, i.e. `v13`           |
    | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
    | `stable/rolling` | Rolling channel that receives all published Teleport releases                |
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    <Tabs>
      <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
        Add the Teleport repository to your repository list:

        ```bash
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport APT repository for cloud.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Update the repo and install Teleport and the Teleport updater
        $ sudo apt-get update
        $ sudo apt-get install "teleport-ent=$TELEPORT_VERSION" teleport-ent-updater
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum install -y yum-utils
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo yum install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo dnf install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport Zypper repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use Zypper to add the teleport RPM repo
        $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo zypper install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater
        ```
      </Tab>
    </Tabs>

    ### OS repository channels

    The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
    `stable/v13` anywhere in the Teleport documentation.

    | Channel name     | Description                                                                  |
    | ---------------- | ---------------------------------------------------------------------------- |
    | `stable/<major>` | Receives releases for the specified major release line, i.e. `v13`           |
    | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
    | `stable/rolling` | Rolling channel that receives all published Teleport releases                |

    <Accordion title="Is my Teleport instance compatible with Teleport Enterprise Cloud?">
      Before installing a `teleport` binary with a version besides v14,
      read our compatibility rules to ensure that the binary is compatible with
      Teleport Enterprise Cloud.

      When running multiple `teleport` binaries within a cluster, the following rules
      apply:

      - **Patch and minor** versions are always compatible, for example, any 8.0.1
        component will work with any 8.0.3 component and any 8.1.0 component will work
        with any 8.3.0 component.
      - Servers support clients that are 1 major version behind, but do not support
        clients that are on a newer major version. For example, an 8.x.x Proxy Service
        is compatible with 7.x.x resource services and 7.x.x `tsh`, but we don't
        guarantee that a 9.x.x resource service will work with an 8.x.x Proxy Service.
        This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
        You must upgrade to 7.x.x first.
      - Proxy Services and resource services do not support Auth Services that are on
        an older major version, and will fail to connect to older Auth Services by
        default. This behavior can be overridden by passing `--skip-version-check`
        when starting Proxy Services and resource services.
    </Accordion>
  </Tab>
</Tabs>

Grant the Teleport Database Service access to credentials that it can use to authenticate to
AWS. If you are running the Teleport Database Service on an EC2 instance, you should use the EC2
Instance Metadata Service method. Otherwise, you must use environment variables:

<Tabs>
  <Tab title="Instance Metadata Service">
    Teleport will detect when it is running on an EC2 instance and use the Instance
    Metadata Service to fetch credentials.

    The EC2 instance should be configured to use an EC2 instance profile. For more
    information, see: [Using Instance Profiles](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use_switch-role-ec2_instance-profiles.html).
  </Tab>

  <Tab title="Environment Variables">
    Teleport's built-in AWS client reads credentials from the following environment
    variables:

    - `AWS_ACCESS_KEY_ID`
    - `AWS_SECRET_ACCESS_KEY`
    - `AWS_DEFAULT_REGION`

    When you start the Teleport Database Service, the service reads environment variables from a
    file at the path `/etc/default/teleport`. Obtain these credentials from your
    organization. Ensure that `/etc/default/teleport` has the following content,
    replacing the values of each variable:

    ```text
    AWS_ACCESS_KEY_ID=00000000000000000000
    AWS_SECRET_ACCESS_KEY=0000000000000000000000000000000000000000
    AWS_DEFAULT_REGION=<YOUR_REGION>
    ```
  </Tab>
</Tabs>

<Accordion title="Have multiple sources of AWS credentials?">
  Teleport's AWS client loads credentials from different sources in the following
  order:

  - Environment Variables
  - Shared credentials file
  - Shared configuration file (Teleport always enables shared configuration)
  - EC2 Instance Metadata (credentials only)

  While you can provide AWS credentials via a shared credentials file or shared
  configuration file, you will need to run the Teleport Database Service with the `AWS_PROFILE`
  environment variable assigned to the name of your profile of choice.

  If you have a specific use case that the instructions above do not account for,
  consult the documentation for the [AWS SDK for
  Go](https://docs.aws.amazon.com/sdk-for-go/api/aws/session/) for a detailed
  description of credential loading behavior.
</Accordion>

Create the Database Service configuration. Replace teleport.example.com with
your Teleport Proxy address or Teleport Cloud tenant (e.g. `mytenant.teleport.sh`),
and replace us-west-1 with your preferred region:

```bash
$ sudo teleport db configure create \
   -o file \
   --proxy=teleport.example.com:443 \
   --token=/tmp/token \
   --rdsproxy-discovery=us-west-1
```

The command will generate a Database Service configuration with RDS Proxy
instances auto-discovery enabled on the us-west-1 region and
place it at the `/etc/teleport.yaml` location.

## Step 2/5. Create an IAM policy for Teleport

Teleport needs AWS IAM permissions to be able to discover and register RDS
Proxy instances.

Teleport can bootstrap IAM permissions for the Database Service based on its
configuration using the `teleport db configure bootstrap` command. You can use
this command in automatic or manual mode:

- In automatic mode, Teleport will attempt to create appropriate IAM policies
  and attach them to the specified IAM identity (user or role). This requires
  IAM permissions to create and attach IAM policies.
- In manual mode, Teleport will print required IAM policies. You can then create
  and attach them manually using the AWS management console.

<Tabs>
  <Tab title="Automatic / IAM User">
    Use this command to bootstrap the permissions automatically when
    your Teleport Database Service runs as an IAM user (for example, uses an AWS
    credentials file).

    ```bash
    $ teleport db configure bootstrap -c /etc/teleport.yaml --attach-to-user TeleportUser
    ```
  </Tab>

  <Tab title="Automatic / IAM Role">
    Use this command to bootstrap the permissions automatically when
    your Teleport Database Service runs as an IAM role (for example, on an EC2
    instance with an attached IAM role).

    ```bash
    $ teleport db configure bootstrap -c /etc/teleport.yaml --attach-to-role TeleportRole
    ```
  </Tab>

  <Tab title="Manual / IAM User">
    Use this command to display required IAM policies which you will then create in your AWS console:

    ```bash
    $ teleport db configure bootstrap -c /etc/teleport.yaml --manual --attach-to-user arn:aws:iam::123456789012:user/TeleportUser
    ```
  </Tab>

  <Tab title="Manual / IAM Role">
    Use this command to display required IAM policies which you will then create in your AWS console:

    ```bash
    $ teleport db configure bootstrap -c /etc/teleport.yaml --manual --attach-to-role arn:aws:iam::123456789012:role/TeleportRole
    ```
  </Tab>
</Tabs>

<Accordion title="Bootstrapping with assume_role_arn in config">
  When `assume_role_arn` is configured for databases or AWS matchers,
  `teleport db configure bootstrap` will determine permissions required for the
  bootstrap target AWS IAM identity using the following logic:

  - When the target does not match `assume_role_arn` in any database resource or
    AWS matcher in the configuration file, the target is assumed to be the
    Teleport Database Service's AWS IAM identity and permissions are bootstrapped
    for all the configured static databases and AWS matchers.
  - When an `--attach-to-role` target matches an `assume_role_arn` setting for
    static databases or AWS matchers in the configuration file, permissions will
    be bootstrapped only for those static databases or AWS matchers.

  You will need to run the bootstrap command once with the Teleport Database
  Service's IAM identity as the policy attachment target, and once for each AWS
  IAM role that is used for `assume_role_arn`.
</Accordion>

## Step 3/5. Start the Database Service

Configure the Teleport Database Service to start automatically when the host boots up by
creating a systemd service for it. The instructions depend on how you installed
the Teleport Database Service.

<Tabs>
  <Tab title="Package Manager">
    On the host where you will run the Teleport Database Service, enable and start Teleport:

    ```bash
    $ sudo systemctl enable teleport
    $ sudo systemctl start teleport
    ```
  </Tab>

  <Tab title="TAR Archive">
    On the host where you will run the Teleport Database Service, create a systemd service
    configuration for Teleport, enable the Teleport service, and start Teleport:

    ```bash
    $ sudo teleport install systemd -o /etc/systemd/system/teleport.service
    $ sudo systemctl enable teleport
    $ sudo systemctl start teleport
    ```
  </Tab>
</Tabs>

You can check the status of the Teleport Database Service with `systemctl status teleport`
and view its logs with `journalctl -fu teleport`.

The Database Service will discover all RDS Proxy instances according to the
configuration and register them in the cluster. In addition to the primary
endpoints of the RDS Proxy instances, their custom endpoints will also be
registered.

## Step 4/5. Configure database user credentials

The Database Service connects to an RDS Proxy instance using IAM
authentication. In addition, the RDS Proxy instance must also be able to
connect to the RDS DB instance or Aurora DB cluster using pre-configured
database user credentials.

First, use Secrets Manager to store sets of user name and password credentials.
You create a separate Secrets Manager secret for each database user account
that RDS Proxy connects to on the RDS DB instance or Aurora DB cluster. The
password associated with the secret must match the database password for that
user in the target database.

For example, the following AWS CLI command creates a Secrets Manager secret for
database user `alice`:

```bash
$ aws secretsmanager create-secret \
  --name rdsproxy_alice --description "database user alice" \
  --secret-string '{"username":"alice","password":"password_for_alice"}'
```

Next, create an IAM role with a policy that can access these secrets, for
example:

```json
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Effect": "Allow",
            "Action": "secretsmanager:GetSecretValue",
            "Resource": [
                "arn:aws:secretsmanager:us-west-1:account_id:secret:rdsproxy_alice",
                "arn:aws:secretsmanager:us-west-1:account_id:secret:rdsproxy_anotheruser"
            ]
        },
        {   
            "Effect": "Allow",
            "Action": "kms:Decrypt",
            "Resource": "arn:aws:kms:us-west-1:account_id:key/key_id",
            "Condition": {
                "StringEquals": {
                    "kms:ViaService": "secretsmanager.us-east-2.amazonaws.com"
                }
            }
        }
    ]
}
```

The IAM role should have the following trust policy:

```json
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Sid": "",
      "Effect": "Allow",
      "Principal": {
        "Service": "rds.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
```

Lastly, modify the RDS Proxy authentication settings to use the created IAM
role and Secrets Manager secrets. Make sure IAM authentication is set to
**Required**:

<img src="/assets/rds-proxy_auth-1d7f9d53c2.png" alt="RDS Proxy Authentication" width="1490" height="1006" />

<Tip>
  <p>
    **IAM authentication per database user**
  </p>

  If you need to disable IAM authentication for some database users that are not
  intended for Teleport access, use the following AWS CLI command to set
  **IAMAuth** *per secret*:

  ```bash
  $ aws rds modify-db-proxy --db-proxy-name my-rds-proxy --auth AuthScheme=SECRETS,SecretArn=arn-of-teleport-access-user,\
  IAMAuth=REQUIRED AuthScheme=SECRETS,SecretArn=arn-of-non-teleport-user,IAMAuth=DISABLED ...
  ```

  See `aws rds modify-db-proxy help` for more information.
</Tip>

## Step 5/5. Connect

Once the Database Service has started and joined the cluster, log in to see the
registered databases:

```bash
$ tsh login --proxy=teleport.example.com --user=alice
$ tsh db ls
Name                         Description                     Labels
---------------------------- ------------------------------- -------
rds-proxy                    RDS Proxy in us-west-1          ...
rds-proxy-my-reader-endpoint RDS Proxy endpoint in us-west-1 ...
```

To retrieve credentials for a database and connect to it:

```bash
$ tsh db connect --db-user=alice --db-name=dev rds-proxy
```

To log out of the database and remove credentials:

```bash
$ tsh db logout rds-proxy
```

## Troubleshooting

### Certificate error

If your `tsh db connect` error includes the following text, you likely have an RDS database created before July 28, 2020, which presents an X.509 certificate that is incompatible with Teleport:

```text
x509: certificate relies on legacy Common Name field, use SANs instead
```

AWS provides instructions to rotate your [SSL/TLS certificate](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.SSL-certificate-rotation.html).

### No credential providers error

If you see the error `NoCredentialProviders: no valid providers in chain` in Database Service logs then Teleport
is not detecting the required credentials to connect via AWS IAM permissions. Check whether
the credentials or security role has been applied in the machine running the Teleport Database Service.

### Timeout errors

The Teleport Database Service needs connectivity to your database endpoints. That may require
enabling inbound traffic on the database from the Database Service on the same VPC or routing rules from another VPC. Using the `nc`
program you can verify connections to databases:

```bash
$ nc -zv postgres-instance-1.sadas.us-east-1.rds.amazonaws.com 5432
# Connection to postgres-instance-1.sadas.us-east-1.rds.amazonaws.com (172.31.24.172) 5432 port [tcp/postgresql] succeeded!
```

### Not authorized to perform `sts:AssumeRole`

The Database Service assumes an IAM role in one of following situations:

- An IAM role is used as `db_user` when accessing AWS services that require IAM
  roles as database users, such as DynamoDB, Keyspaces, Opensearch, and
  Redshift Serverless.
- The `assume_role_arn` field is specified for the database resources or
  dynamic resource matchers.

<Accordion title="Role chaining">
  When both of the above conditions are true for a database connection, the
  Database Service performs a role chaining by assuming the IAM role specified
  `assume_role_arn` first then using that IAM role to assume the IAM role for
  `db_user`.
</Accordion>

You may encounter the following error if the trust relationship is not
configured properly between the IAM roles:

```text
AccessDenied: User: arn:aws:sts::111111111111:assumed-role/database-service-role/i-* is not authorized to perform: sts:AssumeRole on resource: arn:aws:iam::111111111111:role/database-user-role
```

To allow IAM Role `role1` to assume IAM Role `role2`, the following is
generally required:

<Accordion title="1. Configure Trust Relationships on role2">
  `role1` or its AWS account should be set as `Principal` in `role2`'s trust
  policy.

  <Tabs>
    <TabsItem label="Role as principal">
      ```json
      {
        "Version": "2012-10-17",
        "Statement": [
          {
            "Effect": "Allow",
            "Principal": {
              "AWS": "arn:aws:iam::111111111111:role/role1"
            },
            "Action": "sts:AssumeRole"
          }
        ]
      }
      ```
    </TabsItem>

    <TabsItem label="Account as principal">
      ```json
      {
        "Version": "2012-10-17",
        "Statement": [
          {
            "Effect": "Allow",
            "Principal": {
              "AWS": "arn:aws:iam::111111111111:root"
            },
            "Action": "sts:AssumeRole"
          }
        ]
      }
      ```
    </TabsItem>

    <TabsItem label="Cross-account with external-id">
      ```json
      {
        "Version": "2012-10-17",
        "Statement": [
          {
            "Effect": "Allow",
            "Principal": {
              "AWS": "arn:aws:iam::123456789012:role/role1"
            },
            "Action": "sts:AssumeRole",
            "Condition": {
              "StringEquals": {
                "sts:ExternalId": "example-external-id"
              }
            }
          }
        ]
      }
      ```
    </TabsItem>
  </Tabs>
</Accordion>

<Accordion title="2. Configure Permissions Policies on role1">
  `role1` requires `sts:AssumeRole` permissions, for example:

  ```json
  {
      "Version": "2012-10-17",
      "Statement": [
          {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": "arn:aws:iam::111111111111:role/role2"
          }
      ]
  }
  ```

  Note that this policy can be omitted when `role1` and `role2` are in the same
  AWS account and `role1`'s full ARN is configured as Principal in `role2`'s
  trust policy.
</Accordion>

<Accordion title="3. Configure Permissions Boundary on role1">
  `role1` also requires `sts:AssumeRole` permissions in its boundary policy, for
  example:

  ```json
  {
      "Version": "2012-10-17",
      "Statement": [
          {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": "*"
          }
      ]
  }
  ```

  Note that this is only required when a boundary policy is attached to `role1`.
</Accordion>

You can test the trust relationship by running this AWS CLI command as `role1`:

```bash
aws sts assume-role --role-arn arn:aws:iam::111111111111:role/role2 --role-session-name test-trust-relationship
```

Learn more on [how to use trust policies with IAM
roles](https://aws.amazon.com/blogs/security/how-to-use-trust-policies-with-iam-roles/).

### Maximum policy size exceeded errors

Due to [IAM and STS character
limits](https://docs.aws.amazon.com/IAM/latest/UserGuide/reference_iam-quotas.html#reference_iam-quotas-entity-length),
you may encounter one of the following errors in the Database Service logs when
large numbers of databases are registered:

- `LimitExceeded: Maximum policy size of 2048 bytes exceeded for user <iam-user>`
- `LimitExceeded: Maximum policy size of 10240 bytes exceeded for role <iam-role>`

For reference, a user policy can maintain permissions for approximately 6
Redshift databases, or 20 RDS databases due to the IAM policy character limits.
A role policy can maintain permissions for approximately 30 Redshift databases,
or 100 RDS databases.

One way to work around this is to manually manage the IAM policy used for database
connections, and use a wildcard `"*"` for `"Resource"` to reduce the policy size:

<Accordion title="use a wildcard policy">
  Attach a policy with the following permissions to the IAM user or role:

  <Tabs>
    <Tab title="RDS or RDS Proxy">
      ```json
      {
          "Version": "2012-10-17",
          "Statement": [
              {
                  "Effect": "Allow",
                  "Action": "rds-db:connect",
                  "Resource": "*"
              }
          ]
      }
      ```
    </Tab>

    <Tab title="Redshift">
      ```json
      {
          "Version": "2012-10-17",
          "Statement": [
              {
                  "Effect": "Allow",
                  "Action": "redshift:GetClusterCredentials",
                  "Resource": "*"
              }
          ]
      }
      ```
    </Tab>
  </Tabs>

  You can safely remove the inline policy created by the Database Service and the
  IAM permissions for the Database Service to `Get/Put/Delete` the user or role
  policy.
</Accordion>

Another option is to deploy [the Database Service in a highly available (HA)
configuration](/docs/ver/13.x/database-access/guides/ha) where databases can be
sharded to separate Database Services with different IAM roles.

If the limit is exceeded for a user policy, it is also recommended to use an
IAM role for the Database Service instead.

## Next steps

{/* lint ignore list-item-spacing remark-lint */}

- Learn how to [restrict access](/docs/ver/13.x/database-access/rbac) to certain users and databases.

{/* lint ignore list-item-spacing remark-lint */}

- View the [High Availability (HA)](/docs/ver/13.x/database-access/guides/ha) guide.

{/* lint ignore list-item-spacing remark-lint */}

- Take a look at the YAML configuration [reference](/docs/ver/13.x/database-access/reference/configuration).

{/* lint ignore list-item-spacing remark-lint */}

- See the full CLI [reference](/docs/ver/13.x/database-access/reference/cli).

- Learn more on [Setting up database credentials in AWS Secrets
  Manager](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/rds-proxy-setup.html)
  and [Setting up AWS Identity and Access Management (IAM)
  policies](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/rds-proxy-setup.html)
  for RDS Proxy
